# To-do-list-website

./: .gitignore  Makefile  README.md  app.py  driver.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  install_dependencies.yaml  test_ci.yaml  upload_coverage.yaml  validate_ci.yaml
backend/: app.py  controller.py  helpers.py  model.py  todo.sqlite
backend/model/: __init__.py  base.py  project.py  tag.py  task.py
backend/router/: __init__.py  base.py  controller.py  project.py  tag.py  task.py
backend/router/utils/: CRUD.py  DTO.py
frontend/: package-lock.json  package.json
frontend/src/: data.js  data.ts  index.css  main.jsx
frontend/src/routes/: create.jsx  helper.ts  project.jsx  root.jsx  sidebar.jsx
tests/: conftest.py  helpers.py  test_project.py  test_tag.py  test_task.py
