[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["harryle <lehoangsonsg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = {extras = ["standard"], version = "^2.7.0"}
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.28"
advanced-alchemy = "^0.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
